--- a/src/NLP/bpe_Attention-mixedData.ipynb
+++ b/src/NLP/bpe_Attention-mixedData.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:15.751362Z",
-     "start_time": "2019-08-26T07:50:03.522353Z"
+     "end_time": "2019-08-26T11:27:09.393298Z",
+     "start_time": "2019-08-26T11:26:59.712834Z"
     }
    },
    "outputs": [
@@ -41,8 +41,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:15.831316Z",
-     "start_time": "2019-08-26T07:50:15.761362Z"
+     "end_time": "2019-08-26T11:27:09.435276Z",
+     "start_time": "2019-08-26T11:27:09.398296Z"
     }
    },
    "outputs": [],
@@ -65,8 +65,26 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:16.106164Z",
-     "start_time": "2019-08-26T07:50:15.848306Z"
+     "end_time": "2019-08-26T11:27:11.044393Z",
+     "start_time": "2019-08-26T11:27:09.440273Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "import torch.utils.data as data_utils\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-26T11:27:11.187273Z",
+     "start_time": "2019-08-26T11:27:11.048357Z"
     }
    },
    "outputs": [
@@ -134,7 +152,7 @@
        "4                  이거인 듯      0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:16.150133Z",
-     "start_time": "2019-08-26T07:50:16.114158Z"
+     "end_time": "2019-08-26T11:27:11.219257Z",
+     "start_time": "2019-08-26T11:27:11.191272Z"
     }
    },
    "outputs": [
@@ -202,7 +220,7 @@
        "1         2096"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,25 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:16.172121Z",
-     "start_time": "2019-08-26T07:50:16.159131Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "human_X, human_y = human[['comment']], human.label"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:20.177832Z",
-     "start_time": "2019-08-26T07:50:16.178117Z"
+     "end_time": "2019-08-26T11:27:15.016084Z",
+     "start_time": "2019-08-26T11:27:11.224254Z"
     }
    },
    "outputs": [
@@ -316,8 +320,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:20.658559Z",
-     "start_time": "2019-08-26T07:50:20.182829Z"
+     "end_time": "2019-08-26T11:27:15.457833Z",
+     "start_time": "2019-08-26T11:27:15.021082Z"
     }
    },
    "outputs": [
@@ -383,17 +387,14 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:22.256646Z",
-     "start_time": "2019-08-26T07:50:20.666552Z"
+     "end_time": "2019-08-26T11:27:16.790072Z",
+     "start_time": "2019-08-26T11:27:15.464830Z"
     }
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
-    "import torch.utils.data as data_utils\n",
-    "import torch"
+    "human_X, human_y = human[['comment']], human.label\n",
+    "auto_X, auto_y = RandomUnderSampler().fit_sample(auto[['comment']], auto.label)"
    ]
   },
   {
@@ -401,13 +402,14 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:23.899703Z",
-     "start_time": "2019-08-26T07:50:22.263639Z"
+     "end_time": "2019-08-26T11:27:16.807061Z",
+     "start_time": "2019-08-26T11:27:16.793069Z"
     }
    },
    "outputs": [],
    "source": [
-    "auto_X, auto_y = RandomUnderSampler().fit_sample(auto[['comment']], auto.label)"
+    "new_X = np.concatenate([human_X, auto_X])\n",
+    "new_y = np.concatenate([human_y, auto_y])"
    ]
   },
   {
@@ -415,15 +417,15 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:50:23.914696Z",
-     "start_time": "2019-08-26T07:50:23.903702Z"
+     "end_time": "2019-08-26T11:27:16.846042Z",
+     "start_time": "2019-08-26T11:27:16.818056Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(61137, 122274)"
+       "(63233, 164274)"
       ]
      },
      "execution_count": 10,
@@ -432,31 +434,16 @@
     }
    ],
    "source": [
-    "auto_y.sum(), len(auto_y)"
+    "new_y.sum(), len(new_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:55:01.831478Z",
-     "start_time": "2019-08-26T07:55:01.814506Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "new_X = np.concatenate([human_X.values, auto_X])\n",
-    "new_y = np.concatenate([human_y.values, auto_y])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-26T07:55:09.485104Z",
-     "start_time": "2019-08-26T07:55:09.478106Z"
+     "end_time": "2019-08-26T11:27:16.868028Z",
+     "start_time": "2019-08-26T11:27:16.852039Z"
     }
    },
    "outputs": [
@@ -466,7 +453,7 @@
        "((164274, 1), (164274,))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,36 +464,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:55:29.265797Z",
-     "start_time": "2019-08-26T07:55:29.256798Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3849239684916664"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_y.sum() / len(new_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-26T07:55:51.995798Z",
-     "start_time": "2019-08-26T07:55:51.939830Z"
+     "end_time": "2019-08-26T11:31:05.831444Z",
+     "start_time": "2019-08-26T11:31:05.779464Z"
     }
    },
    "outputs": [],
@@ -517,11 +479,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:18.985415Z",
-     "start_time": "2019-08-26T07:56:18.874430Z"
+     "end_time": "2019-08-26T11:31:06.286174Z",
+     "start_time": "2019-08-26T11:31:06.273181Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(47439, 123205, 15794, 41069)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.sum(), len(y_train), y_test.sum(), len(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-26T11:31:22.307086Z",
+     "start_time": "2019-08-26T11:31:22.195077Z"
     }
    },
    "outputs": [],
@@ -532,11 +519,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:22.136604Z",
-     "start_time": "2019-08-26T07:56:19.207242Z"
+     "end_time": "2019-08-26T11:31:27.362125Z",
+     "start_time": "2019-08-26T11:31:23.026606Z"
     }
    },
    "outputs": [
@@ -544,8 +531,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████| 123205/123205 [00:00<00:00, 560345.11it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████| 41069/41069 [00:00<00:00, 570738.97it/s]\n"
+      "\n",
+      "  0%|                                                                                       | 0/123205 [00:00<?, ?it/s]\n",
+      " 45%|███████████████████████████████▉                                       | 55508/123205 [00:00<00:00, 549805.71it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████| 123205/123205 [00:00<00:00, 613302.19it/s]\n",
+      "  0%|                                                                                        | 0/41069 [00:00<?, ?it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████| 41069/41069 [00:00<00:00, 419308.90it/s]"
      ]
     }
    ],
@@ -557,36 +548,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:23.616720Z",
-     "start_time": "2019-08-26T07:56:23.607724Z"
+     "end_time": "2019-08-26T11:31:27.381113Z",
+     "start_time": "2019-08-26T11:31:27.367121Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((123205,), (41069,))"
+       "((123205,), (41069,), (123205,), (41069,))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenized_train.shape, tokenized_test.shape"
+    "tokenized_train.shape, tokenized_test.shape, y_train.shape, y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:31.750116Z",
-     "start_time": "2019-08-26T07:56:29.550326Z"
+     "end_time": "2019-08-26T11:31:36.728771Z",
+     "start_time": "2019-08-26T11:31:34.556010Z"
     }
    },
    "outputs": [],
@@ -599,11 +590,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:31.764060Z",
-     "start_time": "2019-08-26T07:56:31.754065Z"
+     "end_time": "2019-08-26T11:31:36.745776Z",
+     "start_time": "2019-08-26T11:31:36.733768Z"
     }
    },
    "outputs": [
@@ -613,7 +604,7 @@
        "((123205, 50), (41069, 50))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,17 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:35.947669Z",
-     "start_time": "2019-08-26T07:56:35.803749Z"
+     "end_time": "2019-08-26T11:35:34.164016Z",
+     "start_time": "2019-08-26T11:35:34.054087Z"
     }
    },
    "outputs": [],
    "source": [
     "train_data = data_utils.TensorDataset(torch.from_numpy(x_padded_train).type(torch.LongTensor),torch.from_numpy(y_train).type(torch.DoubleTensor))\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 256\n",
     "train_loader = data_utils.DataLoader(train_data, batch_size=BATCH_SIZE, drop_last=True)\n",
     "# return train_loader,x_test_pad,y_test"
    ]
@@ -648,11 +639,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:37.278905Z",
-     "start_time": "2019-08-26T07:56:37.233935Z"
+     "end_time": "2019-08-26T11:35:34.378897Z",
+     "start_time": "2019-08-26T11:35:34.343917Z"
     }
    },
    "outputs": [],
@@ -772,11 +763,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:56:38.399266Z",
-     "start_time": "2019-08-26T07:56:38.349294Z"
+     "end_time": "2019-08-26T11:35:34.637746Z",
+     "start_time": "2019-08-26T11:35:34.601771Z"
     }
    },
    "outputs": [],
@@ -903,11 +894,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T07:57:30.898249Z",
-     "start_time": "2019-08-26T07:57:30.888256Z"
+     "end_time": "2019-08-26T11:35:34.726715Z",
+     "start_time": "2019-08-26T11:35:34.715719Z"
     }
    },
    "outputs": [],
@@ -923,11 +914,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T08:19:27.478502Z",
-     "start_time": "2019-08-26T07:57:31.841713Z"
+     "end_time": "2019-08-26T11:40:28.598444Z",
+     "start_time": "2019-08-26T11:35:34.855622Z"
     },
     "scrolled": true
    },
@@ -951,20 +942,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avg_loss is tensor(0.4316, dtype=torch.float64)\n",
-      "Accuracy of the model 0.7960146103896104\n",
+      "avg_loss is tensor(0.5711, dtype=torch.float64)\n",
+      "Accuracy of the model 0.6803615514553014\n",
       "Running EPOCH 2\n",
-      "avg_loss is tensor(0.2894, dtype=torch.float64)\n",
-      "Accuracy of the model 0.889172077922078\n",
+      "avg_loss is tensor(0.4141, dtype=torch.float64)\n",
+      "Accuracy of the model 0.8146033653846154\n",
       "Running EPOCH 3\n",
-      "avg_loss is tensor(0.2584, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9025649350649351\n",
-      "Running EPOCH 4\n",
-      "avg_loss is tensor(0.2403, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9108603896103896\n",
-      "Running EPOCH 5\n",
-      "avg_loss is tensor(0.2273, dtype=torch.float64)\n",
-      "Accuracy of the model 0.9172077922077922\n"
+      "avg_loss is tensor(0.3469, dtype=torch.float64)\n",
+      "Accuracy of the model 0.865912487006237\n"
      ]
     }
    ],
@@ -972,7 +957,7 @@
     "loss = torch.nn.BCELoss()\n",
     "optimizer = torch.optim.Adam(attention_model.parameters())\n",
     "\n",
-    "losses, accuracy = train(attention_model, train_loader, loss, optimizer, epochs=5,\n",
+    "losses, accuracy = train(attention_model, train_loader, loss, optimizer, epochs=3,\n",
     "                         use_regularization=False, C=0.03, clip=True)\n"
    ]
   },
@@ -985,11 +970,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T08:19:47.698941Z",
-     "start_time": "2019-08-26T08:19:27.501491Z"
+     "end_time": "2019-08-26T11:40:49.877801Z",
+     "start_time": "2019-08-26T11:40:28.609436Z"
     }
    },
    "outputs": [
@@ -1006,14 +991,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.95      0.93     25115\n",
-      "           1       0.92      0.85      0.88     15954\n",
+      "           0       0.90      0.90      0.90     25275\n",
+      "           1       0.84      0.85      0.84     15794\n",
       "\n",
-      "    accuracy                           0.91     41069\n",
-      "   macro avg       0.91      0.90      0.91     41069\n",
-      "weighted avg       0.91      0.91      0.91     41069\n",
+      "    accuracy                           0.88     41069\n",
+      "   macro avg       0.87      0.87      0.87     41069\n",
+      "weighted avg       0.88      0.88      0.88     41069\n",
       "\n",
-      "0.9131218193771458\n"
+      "0.8778397331320461\n"
      ]
     }
    ],
